--- a/yamdb_workflow.yml
+++ b/yamdb_workflow.yml
@@ -1,16 +1,23 @@
 name: Django-app workflow
 
-on: [push]
+on:
+  push:
+    branches:
+      - main
+      - master
 
 jobs:
   tests:
+    strategy:
+      matrix:
+        python-version: [3.7, 3.8, 3.9]
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: 3.7
+        python-version: ${{ matrix.python-version }}
 
     - name: Install dependencies
       run: | 
@@ -45,9 +52,11 @@ jobs:
           context: ./api_yamdb/
           tags: lordkisik/yamdb_final:v1
 
+
   deploy:
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
+    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
     steps:
       - name: executing remote ssh commands to deploy
         uses: appleboy/ssh-action@master
@@ -71,6 +80,7 @@ jobs:
   send_message:
     runs-on: ubuntu-latest
     needs: deploy
+    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
     steps:
     - name: send message
       uses: appleboy/telegram-action@master
